[package]
name = "pebbles-game"
version = "0.1.0"
edition = "2021"

[dependencies]
pebbles-game-io = { path = "./io" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5f1c499f26956901f21f3892b1593910fb09def6" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "5f1c499f26956901f21f3892b1593910fb09def6" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "5f1c499f26956901f21f3892b1593910fb09def6"  }
pebbles-game-io.path="io"

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "5f1c499f26956901f21f3892b1593910fb09def6"  }
pebbles-game-io.path="io"

[lib]
"crate-type" = ["rlib"]

[workspace]
members = [
    "io",
    ".",
]