[package]
name = "pebbles-gear-academy"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1",features = ["debug"] }
pebbles-game-io.path = "pebbles-game-io"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
pebbles-game-io.path = "pebbles-game-io"

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
pebbles-game-io.path = "pebbles-game-io"